grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: default
  labels:
    app: grafana
spec:
  ports:
    - port: 3000
  selector:
    app: grafana
